test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectTypeAndPermissions/Inputs/script1.t
SECTIONS {
  FOO 0x1000 (PROGBYTES) { *(*foo*) }
}